# qtoxchat

./: .clang-format  .clangd.in  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  LICENSE  README.md  README.zh-CN.md  vcpkg.json
cmake/: ConfigureClangd.cmake  Dependencies.cmake  Toxcore.cmake
include/core/: toxcore_wrapper.h
include/widgets/: mainwindow.h
src/: CMakeLists.txt  main.cpp
src/core/: toxcore_wrapper.cpp
src/widgets/: mainwindow.cpp
tests/: CMakeLists.txt
tests/toxcore_wrap_cli/: CMakeLists.txt  main.cpp
